--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -11,7 +11,9 @@ node_modules
 dist
 dist-ssr
 *.local
-
+package-lock.json
+package.json
+node_modules
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
